--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -34,7 +34,7 @@
 
     <ng-container matColumnDef="btnFavorites">
       <th mat-header-cell *matHeaderCellDef>Favorites</th>
-      <td mat-cell *matCellDef="let element"><button (click)="addToFavorites()"  mat-stroked-button color="primary"><mat-icon class="fa-solid fa-star" aria-hidden="false" aria-label="Example home icon"></mat-icon>
+      <td mat-cell *matCellDef="let element"><button (click)="addToFavorites(element)"  mat-stroked-button color="primary"><mat-icon class="fa-solid fa-star" aria-hidden="false" aria-label="Example home icon"></mat-icon>
       </button></td>
 
     </ng-container>
