--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
         <mat-label>Password</mat-label>
         <input matInput formControlName="password" />
       </mat-form-field>
-      <button (click)="registration()" mat-button color="primary">Registration</button>
-      <button (click)="submit()" mat-button color="primary">Submit</button>
+      <button class="btn-submit" (click)="submit()" mat-button color="primary">Log In</button>
+      <a class="reg-link" (click)="registration()">Registration</a>
     </form>
 </div>
