--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,3 +24,18 @@
   margin-top: 25px;
   margin-bottom: 25px;
 }
+
+.btn-submit {
+  margin-bottom: 15px;
+}
+
+.reg-link {
+  cursor: pointer;
+  color: grey;
+}
+
+.reg-link:hover {
+  color: orangered;
+}
+
+
