--- a/src/app/news/favorites-news/favorites-news.component.html
+++ b/src/app/news/favorites-news/favorites-news.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <h1 class="title">Favorites news</h1>
   <hr>
-  <div>
-    <mat-card>
-      <mat-card-title></mat-card-title>
-      <mat-card-subtitle>id</mat-card-subtitle>
-      <mat-card-content>Link</mat-card-content>
-      <mat-card-content>Country</mat-card-content>
+  <div *ngFor="let item of userNews?.news">
+    <mat-card class="news-card">
+      <mat-card-title class="title-news">{{item.title}}</mat-card-title>
+      <mat-card-subtitle><a href="">{{item.link}}</a></mat-card-subtitle>
+      <mat-card-content>{{item.country}}</mat-card-content>
+      <button mat-raised-button color="primary" (click)="deleteFavoritesNews(item.id)">Удалить новость</button>
     </mat-card>
   </div>
 </div>
