--- a/src/app/news/favorites-news/favorites-news.component.scss
+++ b/src/app/news/favorites-news/favorites-news.component.scss
@@ -1,9 +1,18 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .title {
   margin-top: 40px;
+}
+
+.news-card {
+  margin: 15px;
+  padding: 15px;
+}
+
+.title-news {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
